force-app/main/default/lwc/commerceSpotlightContent/commerceSpotlightContent.css
:host {
  display: flex;
  height: 100%;
}

@media only screen and (max-width: 479px) {
  .content__link {
    min-height: 20rem;
  }
}

.content__link {
  position: relative;
  width: 100%;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-end;
  border-radius: 0.25rem;
  background-size: cover;
  background-position: center;
}

.content__link:hover {
  text-decoration: none;
  box-shadow: 0px 10px 25px #e5e8e8;
  cursor: pointer;
}

.content__link:before {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(
    0deg,
    rgba(0, 0, 0, 0.4) 0%,
    rgba(0, 0, 0, 0) 60%,
    rgba(0, 0, 0, 0) 100%
  );
  border-bottom-left-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
  pointer-events: none;
  content: "";
  z-index: 1;
}

.content__name {
  font-weight: var(--lwc-fontWeightBold, 700);
  z-index: 2;
}

.content__description {
  font-size: var(--dxp-g-font-size-4);
  z-index: 2;
}

.content__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
  pointer-events: none;
}

